@@ -3,6 +3,8 @@ package server.bazel.bazelWorkspaceAPI;
 import org.junit.Assert;
 import org.junit.Before;
 import org.junit.Test;
+
+import java.nio.file.Paths;
 import java.util.ArrayList;
 import java.util.List;
 import java.nio.file.Path;
@@ -80,9 +82,9 @@ public class APITests {
             List<Path> paths = new ArrayList<>();
             WorkspaceAPI workspaceAPI = new WorkspaceAPI(simpleWorkSpaceTree);
 
-            paths = workspaceAPI.findPossibleCompletionsForPath(Path.of("//"));
-            Assert.assertTrue(paths.contains(Path.of("main")));
-            Assert.assertTrue(paths.contains(Path.of("lib")));
+            paths = workspaceAPI.findPossibleCompletionsForPath(Paths.get("//"));
+            Assert.assertTrue(paths.contains(Paths.get("main")));
+            Assert.assertTrue(paths.contains(Paths.get("lib")));
         } catch (Exception e) {
             Assert.assertTrue(false);
         }
@@ -94,28 +96,28 @@ public class APITests {
             List<Path> paths = new ArrayList<>();
 
             WorkspaceAPI workspaceAPI = new WorkspaceAPI(simpleWorkSpaceTree);
-            paths = workspaceAPI.findPossibleCompletionsForPath(Path.of("//"));
+            paths = workspaceAPI.findPossibleCompletionsForPath(Paths.get("//"));
             Assert.assertEquals(2, paths.size());
-            Assert.assertTrue(paths.contains(Path.of("main")));
-            Assert.assertTrue(paths.contains(Path.of("lib")));
+            Assert.assertTrue(paths.contains(Paths.get("main")));
+            Assert.assertTrue(paths.contains(Paths.get("lib")));
 
-            paths = workspaceAPI.findPossibleCompletionsForPath(Path.of("//lib/"));
+            paths = workspaceAPI.findPossibleCompletionsForPath(Paths.get("//lib/"));
             Assert.assertEquals(1, paths.size());
-            Assert.assertTrue(paths.contains(Path.of("bazelLib")));
+            Assert.assertTrue(paths.contains(Paths.get("bazelLib")));
 
-            paths = workspaceAPI.findPossibleCompletionsForPath(Path.of("//lib/bazelLib/"));
+            paths = workspaceAPI.findPossibleCompletionsForPath(Paths.get("//lib/bazelLib/"));
             Assert.assertEquals(1, paths.size());
-            Assert.assertTrue(paths.contains(Path.of("bazelLib1")));
+            Assert.assertTrue(paths.contains(Paths.get("bazelLib1")));
 
-            paths = workspaceAPI.findPossibleCompletionsForPath(Path.of("//lib/bazelLib/bazelLib1/"));
+            paths = workspaceAPI.findPossibleCompletionsForPath(Paths.get("//lib/bazelLib/bazelLib1/"));
             Assert.assertEquals(1, paths.size());
-            Assert.assertTrue(paths.contains(Path.of("bazelLib2")));
+            Assert.assertTrue(paths.contains(Paths.get("bazelLib2")));
 
-            paths = workspaceAPI.findPossibleCompletionsForPath(Path.of("//lib/bazelLib/bazelLib1/bazelLib2/"));
+            paths = workspaceAPI.findPossibleCompletionsForPath(Paths.get("//lib/bazelLib/bazelLib1/bazelLib2/"));
             Assert.assertEquals(1, paths.size());
-            Assert.assertTrue(paths.contains(Path.of("bazelLib3")));
+            Assert.assertTrue(paths.contains(Paths.get("bazelLib3")));
 
-            paths = workspaceAPI.findPossibleCompletionsForPath(Path.of("//lib/bazelLib/bazelLib1/bazelLib2/bazelLib3/"));
+            paths = workspaceAPI.findPossibleCompletionsForPath(Paths.get("//lib/bazelLib/bazelLib1/bazelLib2/bazelLib3/"));
             Assert.assertEquals(0, paths.size());
 
         } catch (Exception e) {
@@ -129,35 +131,35 @@ public class APITests {
             List<BuildTarget> buildTargets = new ArrayList<>();
 
             WorkspaceAPI workspaceAPI = new WorkspaceAPI(simpleWorkSpaceTree);
-            BuildTarget rootTargets = new BuildTarget(Path.of("//"), null, "kind");
+            BuildTarget rootTargets = new BuildTarget(Paths.get("//"), null, "kind");
             buildTargets = workspaceAPI.findPossibleTargetsForPath(rootTargets.getPath());
             Assert.assertEquals(0, buildTargets.size());
 
-            BuildTarget libTargets = new BuildTarget(Path.of("//lib"), null, "kind");
+            BuildTarget libTargets = new BuildTarget(Paths.get("//lib"), null, "kind");
             buildTargets = workspaceAPI.findPossibleTargetsForPath(libTargets.getPath());
             Assert.assertEquals(2, buildTargets.size());
-            BuildTarget correctTarget1 = new BuildTarget(Path.of("//lib"), "java_build_target", "kind");
-            BuildTarget correctTarget2 = new BuildTarget(Path.of("//lib"), "java_build_target_2", "kind");
+            BuildTarget correctTarget1 = new BuildTarget(Paths.get("//lib"), "java_build_target", "kind");
+            BuildTarget correctTarget2 = new BuildTarget(Paths.get("//lib"), "java_build_target_2", "kind");
             Assert.assertTrue(buildTargets.contains(correctTarget1));
             Assert.assertTrue(buildTargets.contains(correctTarget2));
 
-            BuildTarget bazelLibTargets = new BuildTarget(Path.of("//lib/bazelLib"), null, "kind");
+            BuildTarget bazelLibTargets = new BuildTarget(Paths.get("//lib/bazelLib"), null, "kind");
             buildTargets = workspaceAPI.findPossibleTargetsForPath(bazelLibTargets.getPath());
             Assert.assertEquals(0, buildTargets.size());
 
-            BuildTarget bazelLib1Targets = new BuildTarget(Path.of("//lib/bazelLib/bazelLib1"), null, "kind");
+            BuildTarget bazelLib1Targets = new BuildTarget(Paths.get("//lib/bazelLib/bazelLib1"), null, "kind");
             buildTargets = workspaceAPI.findPossibleTargetsForPath(bazelLibTargets.getPath());
             Assert.assertEquals(0, buildTargets.size());
 
-            BuildTarget bazelLib2Targets = new BuildTarget(Path.of("//lib/bazelLib/bazelLib1/bazelLib2"), null, "kind");
+            BuildTarget bazelLib2Targets = new BuildTarget(Paths.get("//lib/bazelLib/bazelLib1/bazelLib2"), null, "kind");
             buildTargets = workspaceAPI.findPossibleTargetsForPath(bazelLib2Targets.getPath());
             Assert.assertEquals(0, buildTargets.size());
 
-            BuildTarget bazelLib3Targets = new BuildTarget(Path.of("//lib/bazelLib/bazelLib1/bazelLib2/bazelLib3"), null, "kind");
+            BuildTarget bazelLib3Targets = new BuildTarget(Paths.get("//lib/bazelLib/bazelLib1/bazelLib2/bazelLib3"), null, "kind");
             buildTargets = workspaceAPI.findPossibleTargetsForPath(bazelLib3Targets.getPath());
             Assert.assertEquals(2, buildTargets.size());
-            Assert.assertTrue(buildTargets.contains(new BuildTarget(Path.of("/lib/bazelLib/bazelLib1/bazelLib2/bazelLib3"), "java_build_target_3", "kind")));
-            Assert.assertTrue(buildTargets.contains(new BuildTarget(Path.of("/lib/bazelLib/bazelLib1/bazelLib2/bazelLib3"), "java_build_target_4", "kind")));
+            Assert.assertTrue(buildTargets.contains(new BuildTarget(Paths.get("/lib/bazelLib/bazelLib1/bazelLib2/bazelLib3"), "java_build_target_3", "kind")));
+            Assert.assertTrue(buildTargets.contains(new BuildTarget(Paths.get("/lib/bazelLib/bazelLib1/bazelLib2/bazelLib3"), "java_build_target_4", "kind")));
 
         } catch (Exception e) {
             Assert.fail();
@@ -170,19 +172,19 @@ public class APITests {
             boolean isValid;
 
             WorkspaceAPI workspaceAPI = new WorkspaceAPI(simpleWorkSpaceTree);
-            BuildTarget build1 = new BuildTarget(Path.of("//lib"), "java_build_target", "kind");
+            BuildTarget build1 = new BuildTarget(Paths.get("//lib"), "java_build_target", "kind");
             isValid = workspaceAPI.isValidTarget(build1);
             Assert.assertTrue(isValid);
 
-            BuildTarget build2 = new BuildTarget(Path.of("//lib"), "java_build_target_2", "kind");
+            BuildTarget build2 = new BuildTarget(Paths.get("//lib"), "java_build_target_2", "kind");
             isValid = workspaceAPI.isValidTarget(build2);
             Assert.assertTrue(isValid);
 
-            BuildTarget build3 = new BuildTarget(Path.of("//lib/bazelLib/bazelLib1/bazelLib2/bazelLib3"), "java_build_target_3", "kind");
+            BuildTarget build3 = new BuildTarget(Paths.get("//lib/bazelLib/bazelLib1/bazelLib2/bazelLib3"), "java_build_target_3", "kind");
             isValid = workspaceAPI.isValidTarget(build3);
             Assert.assertTrue(isValid);
 
-            BuildTarget build4 = new BuildTarget(Path.of("//lib/bazelLib/bazelLib1/bazelLib2/bazelLib3"), "java_build_target_4", "kind");
+            BuildTarget build4 = new BuildTarget(Paths.get("//lib/bazelLib/bazelLib1/bazelLib2/bazelLib3"), "java_build_target_4", "kind");
             isValid = workspaceAPI.isValidTarget(build4);
             Assert.assertTrue(isValid);
 
@@ -198,35 +200,35 @@ public class APITests {
 
             WorkspaceAPI workspaceAPI = new WorkspaceAPI(simpleWorkSpaceTree);
 
-            BuildTarget build1 = new BuildTarget(Path.of("//lib"), "java_build_target_3", "kind");
+            BuildTarget build1 = new BuildTarget(Paths.get("//lib"), "java_build_target_3", "kind");
             isValid = workspaceAPI.isValidTarget(build1);
             Assert.assertFalse(isValid);
 
-            BuildTarget build2 = new BuildTarget(Path.of("//lib"), "java_build_target_4", "kind");
+            BuildTarget build2 = new BuildTarget(Paths.get("//lib"), "java_build_target_4", "kind");
             isValid = workspaceAPI.isValidTarget(build2);
             Assert.assertFalse(isValid);
 
-            BuildTarget build3 = new BuildTarget(Path.of("//lib/bazelLib/bazelLib1/bazelLib2/bazelLib3"), "java_build_target_1", "kind");
+            BuildTarget build3 = new BuildTarget(Paths.get("//lib/bazelLib/bazelLib1/bazelLib2/bazelLib3"), "java_build_target_1", "kind");
             isValid = workspaceAPI.isValidTarget(build3);
             Assert.assertFalse(isValid);
 
-            BuildTarget build4 = new BuildTarget(Path.of("//lib/bazelLib/bazelLib1/bazelLib2/bazelLib3"), "java_build_target_2", "kind");
+            BuildTarget build4 = new BuildTarget(Paths.get("//lib/bazelLib/bazelLib1/bazelLib2/bazelLib3"), "java_build_target_2", "kind");
             isValid = workspaceAPI.isValidTarget(build4);
             Assert.assertFalse(isValid);
 
-            BuildTarget build5 = new BuildTarget(Path.of("//lib/lib"), "build", "kind");
+            BuildTarget build5 = new BuildTarget(Paths.get("//lib/lib"), "build", "kind");
             isValid = workspaceAPI.isValidTarget(build5);
             Assert.assertFalse(isValid);
 
-            BuildTarget build6 = new BuildTarget(Path.of("lib/lib"), "build", "kind");
+            BuildTarget build6 = new BuildTarget(Paths.get("lib/lib"), "build", "kind");
             isValid = workspaceAPI.isValidTarget(build6);
             Assert.assertFalse(isValid);
 
-            BuildTarget build7 = new BuildTarget(Path.of("//lib"), null, "kind");
+            BuildTarget build7 = new BuildTarget(Paths.get("//lib"), null, "kind");
             isValid = workspaceAPI.isValidTarget(build7);
             Assert.assertFalse(isValid);
 
-            BuildTarget build8 = new BuildTarget(Path.of("//lib/bazelLib/bazelLib1/bazelLib2"), "fake", "kind");
+            BuildTarget build8 = new BuildTarget(Paths.get("//lib/bazelLib/bazelLib1/bazelLib2"), "fake", "kind");
             isValid = workspaceAPI.isValidTarget(build8);
             Assert.assertFalse(isValid);
 
@@ -241,23 +243,23 @@ public class APITests {
             boolean isValid;
 
             WorkspaceAPI workspaceAPI = new WorkspaceAPI(simpleWorkSpaceTree);
-            SourceFile main = new SourceFile("main.java", Path.of("//main/main.java"));
+            SourceFile main = new SourceFile("main.java", Paths.get("//main/main.java"));
             isValid = workspaceAPI.isSourceFileInPackage(main);
             Assert.assertTrue(isValid);
 
-            SourceFile file2 = new SourceFile("file2.java", Path.of("//main/file2.java"));
+            SourceFile file2 = new SourceFile("file2.java", Paths.get("//main/file2.java"));
             isValid = workspaceAPI.isSourceFileInPackage(file2);
             Assert.assertTrue(isValid);
 
-            SourceFile file3 = new SourceFile("file3.java", Path.of("//main/file3.java"));
+            SourceFile file3 = new SourceFile("file3.java", Paths.get("//main/file3.java"));
             isValid = workspaceAPI.isSourceFileInPackage(file3);
             Assert.assertTrue(isValid);
 
-            SourceFile file4 = new SourceFile("file4.java", Path.of("//lib/bazelLib/bazelLib1/bazelLib2/bazelLib3/file4.java"));
+            SourceFile file4 = new SourceFile("file4.java", Paths.get("//lib/bazelLib/bazelLib1/bazelLib2/bazelLib3/file4.java"));
             isValid = workspaceAPI.isSourceFileInPackage(file4);
             Assert.assertTrue(isValid);
 
-            SourceFile file5 = new SourceFile("file5.java", Path.of("//lib/bazelLib/bazelLib1/bazelLib2/bazelLib3/file5.java"));
+            SourceFile file5 = new SourceFile("file5.java", Paths.get("//lib/bazelLib/bazelLib1/bazelLib2/bazelLib3/file5.java"));
             isValid = workspaceAPI.isSourceFileInPackage(file5);
             Assert.assertTrue(isValid);
 
@@ -273,31 +275,31 @@ public class APITests {
 
             WorkspaceAPI workspaceAPI = new WorkspaceAPI(simpleWorkSpaceTree);
 
-            SourceFile fake1 = new SourceFile("fake.java", Path.of("//main/fake.java"));
+            SourceFile fake1 = new SourceFile("fake.java", Paths.get("//main/fake.java"));
             isValid = workspaceAPI.isSourceFileInPackage(fake1);
             Assert.assertFalse(isValid);
 
-            SourceFile fake2 = new SourceFile("main.", Path.of("//main/fake."));
+            SourceFile fake2 = new SourceFile("main.", Paths.get("//main/fake."));
             isValid = workspaceAPI.isSourceFileInPackage(fake2);
             Assert.assertFalse(isValid);
 
-            SourceFile fake3 = new SourceFile("fake", Path.of("//main/fake"));
+            SourceFile fake3 = new SourceFile("fake", Paths.get("//main/fake"));
             isValid = workspaceAPI.isSourceFileInPackage(fake3);
             Assert.assertFalse(isValid);
 
-            SourceFile fake4 = new SourceFile("", Path.of("//main/"));
+            SourceFile fake4 = new SourceFile("", Paths.get("//main/"));
             isValid = workspaceAPI.isSourceFileInPackage(fake4);
             Assert.assertFalse(isValid);
 
-            SourceFile fake5 = new SourceFile("", Path.of("//"));
+            SourceFile fake5 = new SourceFile("", Paths.get("//"));
             isValid = workspaceAPI.isSourceFileInPackage(fake5);
             Assert.assertFalse(isValid);
 
-            SourceFile fake6 = new SourceFile("", Path.of(""));
+            SourceFile fake6 = new SourceFile("", Paths.get(""));
             isValid = workspaceAPI.isSourceFileInPackage(fake6);
             Assert.assertFalse(isValid);
 
-            SourceFile fake7 = new SourceFile("file1.java", Path.of("//lib/file1.java"));
+            SourceFile fake7 = new SourceFile("file1.java", Paths.get("//lib/file1.java"));
             isValid = workspaceAPI.isSourceFileInPackage(fake7);
             Assert.assertFalse(isValid);
 
@@ -361,25 +363,25 @@ public class APITests {
             Path buildPath;
             WorkspaceAPI workspaceAPI = new WorkspaceAPI(simpleWorkSpaceTree);
 
-            SourceFile main = new SourceFile("main.java", Path.of("//main/main.java"));
+            SourceFile main = new SourceFile("main.java", Paths.get("//main/main.java"));
             buildPath = workspaceAPI.findPathToBUILDFromSourceFile(main);
-            Assert.assertEquals(Path.of("//main/BUILD"), buildPath);
+            Assert.assertEquals(Paths.get("//main/BUILD"), buildPath);
 
-            SourceFile file2 = new SourceFile("file2.java", Path.of("//main/file2.java"));
+            SourceFile file2 = new SourceFile("file2.java", Paths.get("//main/file2.java"));
             buildPath = workspaceAPI.findPathToBUILDFromSourceFile(file2);
-            Assert.assertEquals(Path.of("//main/BUILD"), buildPath);
+            Assert.assertEquals(Paths.get("//main/BUILD"), buildPath);
 
-            SourceFile file3 = new SourceFile("file3.java", Path.of("//main/file3.java"));
+            SourceFile file3 = new SourceFile("file3.java", Paths.get("//main/file3.java"));
             buildPath = workspaceAPI.findPathToBUILDFromSourceFile(file3);
-            Assert.assertEquals(Path.of("//main/BUILD"), buildPath);
+            Assert.assertEquals(Paths.get("//main/BUILD"), buildPath);
 
-            SourceFile file4 = new SourceFile("file4.java", Path.of("//lib/bazelLib/bazelLib1/bazelLib2/bazelLib3/file4.java"));
+            SourceFile file4 = new SourceFile("file4.java", Paths.get("//lib/bazelLib/bazelLib1/bazelLib2/bazelLib3/file4.java"));
             buildPath = workspaceAPI.findPathToBUILDFromSourceFile(file4);
-            Assert.assertEquals(Path.of("//lib/bazelLib/bazelLib1/bazelLib2/bazelLib3/BUILD"), buildPath);
+            Assert.assertEquals(Paths.get("//lib/bazelLib/bazelLib1/bazelLib2/bazelLib3/BUILD"), buildPath);
 
-            SourceFile file5 = new SourceFile("file5.java", Path.of("//lib/bazelLib/bazelLib1/bazelLib2/bazelLib3/file5.java"));
+            SourceFile file5 = new SourceFile("file5.java", Paths.get("//lib/bazelLib/bazelLib1/bazelLib2/bazelLib3/file5.java"));
             buildPath = workspaceAPI.findPathToBUILDFromSourceFile(file5);
-            Assert.assertEquals(Path.of("//lib/bazelLib/bazelLib1/bazelLib2/bazelLib3/BUILD"), buildPath);
+            Assert.assertEquals(Paths.get("//lib/bazelLib/bazelLib1/bazelLib2/bazelLib3/BUILD"), buildPath);
         } catch (WorkspaceAPIException e) {
             Assert.fail();
         }
